# wallet-cli

./: .gitignore  .secrets.baseline  AGENT.md  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  goal.yaml  pw-dev  pyproject.toml
.github/workflows/: publish.yml
docs/: bind.md  config.md  echo.md  install.md  llm-token-efficiency.md  sync.md  usage.md
docs/commands/: bind.md  chat.md  config.md  echo.md  msg.md  onboard.md  shell.md  sync.md  test.md
githooks/: pre-push
pw-backlog/: 2. Bind@Hoster.yaml
pw-tests/: 1-Echo@Domain.yaml  1. Echo@Domain.yaml  2-PublicKey.yaml  2-PublicKeyA.yaml  2-PublicKeyB.yaml  3-Error.yaml
pw-tests/3-GroupTest A/: 1-Test-A1.yaml
pw-tests/3-GroupTest B/: 1-Test-B1.yaml  1-Test-B2.yaml
pw-tests/3-GroupTest C/: 1-Test-C1.yaml  1-Test-C2.yaml
python/pollyweb_cli/: bind_feature.py  cli.py  config_feature.py  errors.py  models.py  parser.py  shell_feature.py  sync_feature.py  transport.py
src/pollyweb_cli/: cli.py
tasks/: lessons.md  todo.md
test-msgs/: 1. Echo@Domain.yaml
tests/: README.md  __init__.py  cli_test_helpers.py  conftest.py  test_bind.py  test_chat.py  test_cli.py  test_cli_core.py  test_config.py  test_debug_tools.py  test_echo.py  test_msg_command.py  test_onboard.py  test_shell.py  test_sync.py  test_test_command.py
tools/: audit-llm-context.sh  run-quality-gates.sh
wallet/: WALLET.py  WALLET_BASE.py  WALLET_BINDS.py  WALLET_MESSENGER.py  WALLET_PAY.py  WALLET_PROMPT.py  WALLET_SESSIONS.py  WALLET_SETUP.py  WALLET_SHARE.py  WALLET_TESTS.py  WALLET_TOKENS.py  WALLET_WIFI.py
(+29 files in other folders)
