[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pollyweb-cli"
version = "0.1.0"
description = "Command line wallet tooling built on the pollyweb library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pollyweb==1.0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pw = "pollyweb_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
