[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pollyweb-cli"
dynamic = ["version"]
description = "Command line wallet tooling built on the pollyweb library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pollyweb @ git+https://github.com/pollyweb-org/pollyweb-pypi.git@3f1bde8",
]

[project.urls]
"Homepage" = "https://pypi.org/project/pollyweb-cli/"
"Source" = "https://github.com/jorgemf/wallet-cli"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
pw = "pollyweb_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
